--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -130,4 +130,4 @@ jobs:
             - name: download artifact
               uses: actions/download-artifact@v4
               with:
-                name: my-artifact-${{ github.run_number }}
+                name: artifact-${{ github.run_number }}
