--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -105,6 +105,10 @@ jobs:
                   echo "Building project"
 
   deploy:
+        strategy:
+          matrix:
+            opeartion-system: [windows-latest, ubuntu-latest]
+            python-version: ['3.10', '3.11', '3.12', '3.13']
         runs-on: ubuntu-latest
         needs: run
         steps:
