--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,7 +13,14 @@ jobs:
         strategy:
           matrix:
             opeartion-system: [windows-latest, ubuntu-latest]
-            python-version: ['3.10', '3.11', '3.12', '3.13']
+            python-version: ['3.10', '3.11', '3.12']
+            include:
+              - opeartion-system: ubuntu-latest
+                python-version: '3.13'
+            exclude:
+              - opeartion-system: windows-latest
+                python-version: '3.10'
+
 
         environment: test_env
         env:
