--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -115,7 +115,13 @@ jobs:
         strategy:
           matrix:
             opeartion-system: [windows-latest, ubuntu-latest]
-            python-version: ['3.10', '3.11', '3.12', '3.13']
+            python-version: ['3.10', '3.11', '3.12']
+            include:
+              - opeartion-system: ubuntu-latest
+                python-version: '3.13'
+            exclude:
+              - opeartion-system: windows-latest
+                python-version: '3.10'
         runs-on: ubuntu-latest
         needs: run
         steps:
